add node elimination, support signatures